--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.10-slim
 
 RUN apt-get update && \
-    apt-get install -y poppler-utils curl jq
+    apt-get install -y poppler-utils curl jq git
 RUN pip install amazon-textract-textractor[pdf,pandas] openai scrapy
 ENV NVM_DIR /usr/local/nvm
 ENV NODE_VERSION v16.17.0
