--- a/.github/workflows/ratskeller.yaml
+++ b/.github/workflows/ratskeller.yaml
@@ -110,9 +110,11 @@ jobs:
         path: |
           tmp
     - name: cleanup git
+      shell: bash
       run: |
         git config --global user.name 'action'
         git config --global user.email 'holygrolli@users.noreply.github.com'
+        git config --system --add safe.directory $PWD
         git add locations
         git add data
         git commit -am "scraped result"
