--- a/.github/workflows/ratskeller.yaml
+++ b/.github/workflows/ratskeller.yaml
@@ -106,7 +106,8 @@ jobs:
         mkdir -p ../data/ratskeller
         cp final.json ../data/ratskeller/$(date -d"$(jq -r 'keys[0]' final.json)" +%Y-%V).json
         CURRENTFILE=${{ matrix.files }}
-        cat ../locations/ratskeller/scraped_done.txt <(echo $'\n'$(cat scraped_links.txt | grep ${CURRENTFILE%_separated*})) | sort -u | grep . > ../locations/ratskeller/scraped_done.txt
+        cat ../locations/ratskeller/scraped_done.txt <(echo $'\n'$(cat scraped_links.txt | grep ${CURRENTFILE%_separated*})) | sort -u | grep . > scraped_done.txt
+        cp scraped_done.txt ../locations/ratskeller/scraped_done.txt
     - name: Archive all tmp files
       uses: actions/upload-artifact@v3
       with:
