--- a/.github/workflows/leos.yaml
+++ b/.github/workflows/leos.yaml
@@ -27,8 +27,8 @@ jobs:
       - id: setmatrix
         working-directory: tmp
         run: |
-          find . -name '*.png' -printf '%P\n'
-          matrixInput=$(find . -name '*.png' -printf '%P\n') # Creates array of all png files in tmp folder
+          find . -name '*.png' -or -name '*.jpg' -printf '%P\n'
+          matrixInput=$(find . -name '*.png' -or -name '*.jpg' -printf '%P\n') # Creates array of all png files in tmp folder
           echo -n "$matrixInput"
           # Start Generate Json String
           echo "$matrixInput" | \
