--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -32,7 +32,7 @@ jobs:
           for loc in $(ls -1 data | grep -v galeria);
           do
             jq '.offers = inputs' data/${loc}/details.json <(jq -s 'reduce .[] as $item ({}; . * $item)' data/${loc}/2*.json) > tmp-data/merged_${loc}.json
-            jq -c --slurpfile locations <(cat tmp-data/merged_*.json | jq -s) '.locations = $locations[0]' <(echo '{"locations": ""}') > tmp-data/data.json
+            jq -c --slurpfile locations <(cat tmp-data/merged_*.json | jq -s) '.locations = $locations[0]' <(echo '{"locations": ""}') > site/public/data.json
           done
       - name: build site 🔨
         working-directory: site
