feat: support PR trigger for every branch

--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -11,7 +11,7 @@ on:
       - 'site/**'
       - '.github/workflows/site.yaml'
   pull_request:
-    branches:
+    branches-ignore:
       - 'main'
     paths:
       - 'data/**'
