--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -6,16 +6,13 @@ on:
   push:
     branches:
       - 'main'
+      - 'develop'
     paths:
       - 'data/**'
       - '.github/workflows/site.yaml'
   pull_request:
     branches-ignore:
       - 'main'
-    paths:
-      - 'data/**'
-      - 'site/**'
-      - '.github/workflows/site.yaml'
 
 jobs:
   build:
