--- a/.github/workflows/site-release.yaml
+++ b/.github/workflows/site-release.yaml
@@ -17,6 +17,7 @@ jobs:
   get-version:
     runs-on: ubuntu-latest
     outputs:
+      skipped: ${{ steps.changelog.outputs.skipped }}
       version: ${{ steps.changelog.outputs.tag }}
     steps:
       # Get the repository's code
@@ -34,51 +35,10 @@ jobs:
           skip-tag: "true"
   build:
     needs: get-version
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/holygrolli/whatsupforlunch:main
-    steps:
-      # Get the repository's code
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Add SHORT_SHA env property with commit short sha
-        id: gitvars
-        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
-      - name: build data.json
-        shell: bash
-        run: |
-          mkdir -p tmp-data
-          for loc in $(ls -1 data | grep -v galeria);
-          do
-            jq '.offers = inputs' data/${loc}/details.json <(jq -s 'reduce .[] as $item ({}; . * $item)' data/${loc}/2*.json) > tmp-data/merged_${loc}.json
-          done
-          jq -c --slurpfile locations <(cat tmp-data/merged_*.json | jq -s) '.locations = $locations[0]' <(echo '{"locations": ""}') > site/public/data.json
-      - name: build site 🔨
-        working-directory: site
-        shell: bash
-        env:
-          REACT_APP_VERSION: ${{ needs.get-version.outputs.version }}
-          REACT_APP_HASH: ${{ steps.gitvars.outputs.SHORT_SHA }}
-        run: |
-          npm install
-          if [[ "${{ github.head_ref || github.ref_name }}" != "main" ]]; then
-            export PUBLIC_URL="/${{ github.head_ref || github.ref_name }}"
-          fi
-          npm run build
-      - name: deploy 🚛
-        shell: bash
-        run: |
-          if [[ "${{ github.head_ref || github.ref_name }}" == "main" ]]; then
-            export TARGET_PATH="${{ secrets.DEPLOY_PATH }}"
-          else
-            export TARGET_PATH="/dev.lunchdeal.li/httpdocs/${{ github.head_ref || github.ref_name }}"
-          fi
-          echo -e "${{ secrets.DEPLOY_KEY }}" >__TEMP_INPUT_KEY_FILE
-          chmod 600 __TEMP_INPUT_KEY_FILE
-          ssh -o StrictHostKeyChecking=no -i __TEMP_INPUT_KEY_FILE "${{ secrets.DEPLOY_USER }}"@"${{ secrets.DEPLOY_HOST }}" "rm -rf /tmp/upload_tmp; mkdir /tmp/upload_tmp"
-          scp -o StrictHostKeyChecking=no -i __TEMP_INPUT_KEY_FILE -r site/build/* "${{ secrets.DEPLOY_USER }}"@"${{ secrets.DEPLOY_HOST }}":/tmp/upload_tmp
-          ssh -o StrictHostKeyChecking=no -i __TEMP_INPUT_KEY_FILE "${{ secrets.DEPLOY_USER }}"@"${{ secrets.DEPLOY_HOST }}" "rm -rf ${TARGET_PATH}/*; mkdir -p ${TARGET_PATH}; cp -R /tmp/upload_tmp/* ${TARGET_PATH}"
-          #"${{ secrets.DEPLOY_PATH }}"
+    if: ${{ steps.get-version.outputs.skipped == 'false' }}
+    uses: ./.github/workflows/site.yaml
+    with:
+      version: ${{ needs.get-version.outputs.version }}
   create-version:
     needs: build
     runs-on: ubuntu-latest
