--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -17,18 +17,43 @@ on:
   push:
     branches:
       - 'develop'
-  push:
-    branches:
       - 'main'
-    paths:
-      - 'data/**'
-      - '.github/workflows/site.yaml'
   pull_request:
     branches-ignore:
       - 'main'
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    # Required permissions
+    permissions:
+      pull-requests: read
+    # Set job outputs to values from filter step
+    outputs:
+      data: ${{ steps.filter.outputs.data }}
+      frontend: ${{ steps.filter.outputs.frontend }}
+      locations: ${{ steps.filter.outputs.locations }}
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        # This may save additional git fetch roundtrip if
+        # merge-base is found within latest 20 commits
+        fetch-depth: 20
+    - uses: dorny/paths-filter@v2
+      id: filter
+      with:
+        filters: |
+          data:
+            - 'data/**'
+          frontend:
+            - 'site/**'
+          locations:
+            - 'locations/**'
+          workflow:
+            - '.github/workflows/site.yaml'
   build:
+    needs: changes
+    if: ${{ needs.changes.outputs.data == 'true' || needs.changes.outputs.workflow == 'true' || github.event_name == 'workflow_call' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/holygrolli/whatsupforlunch:main
