--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -27,6 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     # Required permissions
     permissions:
+      contents: read
       pull-requests: read
     # Set job outputs to values from filter step
     outputs:
