--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -34,6 +34,7 @@ jobs:
       data: ${{ steps.filter.outputs.data }}
       frontend: ${{ steps.filter.outputs.frontend }}
       locations: ${{ steps.filter.outputs.locations }}
+      workflow: ${{ steps.filter.outputs.workflow }}
     steps:
     - uses: actions/checkout@v3
       with:
