--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -44,6 +44,7 @@ jobs:
     - uses: dorny/paths-filter@v2
       id: filter
       with:
+        base: ${{ ((github.head_ref || github.ref_name) && 'main') || '' }}
         filters: |
           data:
             - 'data/**'
