--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -56,7 +56,9 @@ jobs:
             - '.github/workflows/site.yaml'
   build:
     needs: changes
-    if: ${{ needs.changes.outputs.data == 'true' || needs.changes.outputs.workflow == 'true' || github.event_name == 'workflow_call' || github.event_name == 'workflow_dispatch' }}
+    if: >-
+      ${{ !(github.ref_name == 'main' && github.event_name != 'workflow_call' && (needs.changes.outputs.frontend == 'true' || needs.changes.outputs.locations == 'true')) 
+        && (needs.changes.outputs.data == 'true' || needs.changes.outputs.workflow == 'true' || github.event_name == 'workflow_call' || github.event_name == 'workflow_dispatch') }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/holygrolli/whatsupforlunch:main
