--- a/.github/workflows/emilundmoritz.yaml
+++ b/.github/workflows/emilundmoritz.yaml
@@ -44,7 +44,13 @@ jobs:
           retention-days: 5
           path: |
             tmp
+      - uses: tibdex/github-app-token@v1
+        id: generate-token
+        with:
+          app_id: ${{ secrets.TOKEN_APP_ID }}
+          private_key: ${{ secrets.TOKEN_APP_PRIVATE_KEY }}
       - name: Create Pull Request
+        if: ${{ !github.event.act }}
         uses: peter-evans/create-pull-request@v5
         with:
           add-paths: |
@@ -52,3 +58,4 @@ jobs:
           branch: ${{ github.workflow }}-cron
           commit-message: "chore(data): automated scraping"
           labels: auto-approve-cron
+          token: ${{ steps.generate-token.outputs.token }}
