fix(ci): configure UPDATE_LABELS

--- a/.github/workflows/automerge-cron-pr.yaml
+++ b/.github/workflows/automerge-cron-pr.yaml
@@ -21,3 +21,4 @@ jobs:
         env:
           GITHUB_TOKEN: "${{ steps.generate-token.outputs.token }}"
           MERGE_LABELS: "auto-approve-cron"
+          UPDATE_LABELS: "auto-approve-cron"
