fix(ci): find query properly detects other image types

--- a/.github/workflows/leos.yaml
+++ b/.github/workflows/leos.yaml
@@ -51,7 +51,7 @@ jobs:
         working-directory: tmp
         run: |
           find . \( -name '*.png' -o -name '*.jpg' \) -printf '%P\n'
-          matrixInput=$(find . -name \( -name '*.png' -o -name '*.jpg' \) -printf '%P\n') # Creates array of all png files in tmp folder
+          matrixInput=$(find . \( -name '*.png' -o -name '*.jpg' \) -printf '%P\n') # Creates array of all png files in tmp folder
           echo -n "$matrixInput"
           # Start Generate Json String
           echo "$matrixInput" | \
