fix(ci): update remote first

--- a/.github/workflows/downmerge.yaml
+++ b/.github/workflows/downmerge.yaml
@@ -17,6 +17,8 @@ jobs:
           token: ${{ steps.generate-token.outputs.token }}
       - name: merge main to develop
         run: |
+          git remote update
+          git fetch
           git checkout develop
           git merge main
           git push
