--- a/.github/workflows/upmerge.yaml
+++ b/.github/workflows/upmerge.yaml
@@ -13,6 +13,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           ref: develop
           token: ${{ steps.generate-token.outputs.token }}
       - name: merge develop to main
