--- a/.github/workflows/ratskeller.yaml
+++ b/.github/workflows/ratskeller.yaml
@@ -1,6 +1,8 @@
 name: ratskeller
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 14 * * 0'
 permissions: 
   contents: write
   packages: write
@@ -180,6 +182,6 @@ jobs:
             data
           branch: ${{ github.workflow }}-cron
           commit-message: "chore(data): automated scraping"
-          #labels: "auto-approve-cron"
+          labels: "auto-approve-cron"
           title: "${{ github.workflow }} data updates"
           token: ${{ steps.generate-token.outputs.token }}
