--- a/.github/workflows/lecasino.yaml
+++ b/.github/workflows/lecasino.yaml
@@ -1,6 +1,8 @@
 name: lecasino
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '45 7 * * 1'
 permissions: 
   contents: write
   packages: write
@@ -58,17 +60,16 @@ jobs:
     steps:
     - name: checkout source code
       uses: actions/checkout@v3
-    - name: fetch latest git
-      if: ${{ !github.event.act }} # skip during local actions testing
-      shell: bash
-      run: |
-        git config --system --add safe.directory $PWD
-        git pull
     - name: Download pdf artifacts
       uses: actions/download-artifact@v3
       with:
         name: pdfs
-        path: tmp
+        path: downloadtmp
+    - name: copy step files
+      run: |
+        mkdir tmp
+        cd tmp
+        cp ../downloadtmp/${{ matrix.files }} .
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
@@ -101,10 +102,20 @@ jobs:
       run: |
         python ../locations/lecasino/process_chatgpt.py ../locations/lecasino/prompt.txt table.csv
         mkdir -p ../data/lecasino
-        cp final.json ../data/lecasino/$(date -d"$(jq -r 'keys[0]' final.json)" +%Y-%V).json
-        CURRENTFILE=${{ matrix.files }}
-        cat ../data/lecasino/scraped_done.txt <(echo $'\n'$(cat scraped_links.txt | grep ${CURRENTFILE%_separated*})) | sort -u | grep . > scraped_done.txt
-        cp scraped_done.txt ../data/lecasino/scraped_done.txt
+    - name: collect final files
+      working-directory: tmp
+      shell: bash
+      run: |
+        mkdir -p ../success-pdfs
+        cp ${{ matrix.files }} ../success-pdfs
+        cp final.json ../success-pdfs/$(date -d"$(jq -r 'keys[0]' final.json)" +%Y-%V).json
+    - name: Archive final files
+      uses: actions/upload-artifact@v3
+      with:
+        name: success-pdfs
+        retention-days: 5
+        path: |
+          success-pdfs
     - name: Archive all tmp files
       uses: actions/upload-artifact@v3
       with:
@@ -112,13 +123,51 @@ jobs:
         retention-days: 5
         path: |
           tmp
-    - name: cleanup git
-      if: ${{ !github.event.act }} # skip during local actions testing
-      shell: bash
-      run: |
-        git config --global user.name 'action'
-        git config --global user.email 'holygrolli@users.noreply.github.com'
-        git config --system --add safe.directory $PWD
-        git add data
-        git commit -am "scraped result"
-        git push
+  publish:
+    needs: process
+    if: success() || failure ()
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+        with:
+          ref: >-
+            ${{
+              github.event_name == 'schedule' && 'main' || ''
+            }}
+      - name: Download originally downloaded pdf artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: pdfs
+          path: downloadtmp
+      - name: Download successfully processed pdf artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: success-pdfs
+          path: success-pdfs
+      - name: process csv with chatgpt
+        working-directory: success-pdfs
+        shell: bash
+        run: |
+          for file in $(find . -type f -name "*.pdf" -printf '%P\n');
+          do
+            cat ../data/lecasino/scraped_done.txt <(echo $'\n'$(cat ../downloadtmp/scraped_links.txt | grep ${file%_separated*})) | sort -u | grep . > scraped_done.txt
+            mv scraped_done.txt ../data/lecasino/scraped_done.txt
+          done
+          cp *.json ../data/lecasino/
+      - uses: tibdex/github-app-token@v1
+        id: generate-token
+        with:
+          app_id: ${{ secrets.TOKEN_APP_ID }}
+          private_key: ${{ secrets.TOKEN_APP_PRIVATE_KEY }}
+      - name: Create Pull Request
+        if: ${{ !github.event.act }}
+        uses: peter-evans/create-pull-request@v5
+        with:
+          add-paths: |
+            data
+          branch: ${{ github.workflow }}-cron
+          commit-message: "chore(data): automated scraping"
+          labels: "auto-approve-cron"
+          title: "${{ github.workflow }} data updates"
+          token: ${{ steps.generate-token.outputs.token }}
