--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -21,7 +21,7 @@ on:
   pull_request:
     branches-ignore:
       - 'main'
-
+concurrency: ssh-deploy
 jobs:
   changes:
     runs-on: ubuntu-latest
